fixed overflow

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -9,7 +9,7 @@
 body {
     font-family: 'Roboto', sans-serif;
     margin: 0px;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 a {
     text-decoration: none;
